--- a/ganhos2.html
+++ b/ganhos2.html
@@ -74,44 +74,46 @@
       <button onclick="copiarTexto('link')">Copiar</button>
     </div>
 
-    <div class="label">Minha equipe <a href="#" style="color:#0f0;">Detalhes da equipe >></a></div>
+    <div class="linha">
+      <strong>Compartilhar</strong>
+      <button onclick="compartilharWhatsApp()">WhatsApp</button>
+    </div>
+
+    <div class="label">Minha equipe</div>
 
     <h3>LV1</h3>
     <div class="linha"><span>26% Taxa de comissão</span></div>
     <div class="linha"><span id="lv1-qtd">0 Quantidade efetiva</span></div>
-    <div class="linha"><span id="lv1-bonus">R$ 0.00 Bônus</span></div>
+    <div class="linha"><span id="lv1-bonus">R$ 0,00 Bônus</span></div>
 
     <h3>LV2</h3>
     <div class="linha"><span>1% Taxa de comissão</span></div>
     <div class="linha"><span id="lv2-qtd">0 Quantidade efetiva</span></div>
-    <div class="linha"><span id="lv2-bonus">R$ 0.00 Bônus</span></div>
+    <div class="linha"><span id="lv2-bonus">R$ 0,00 Bônus</span></div>
 
     <h3>LV3</h3>
     <div class="linha"><span>1% Taxa de comissão</span></div>
     <div class="linha"><span id="lv3-qtd">0 Quantidade efetiva</span></div>
-    <div class="linha"><span id="lv3-bonus">R$ 0.00 Bônus</span></div>
+    <div class="linha"><span id="lv3-bonus">R$ 0,00 Bônus</span></div>
 
     <div class="linha"><strong>Número de pessoas</strong><span id="total-pessoas">0</span></div>
-    <div class="linha"><strong>Bônus total</strong><span id="total-bonus">R$ 0.00</span></div>
+    <div class="linha"><strong>Bônus total</strong><span id="total-bonus">R$ 0,00</span></div>
 
     <h3>Lista da equipe completa</h3>
     <ul id="listaEquipe"></ul>
     <p>Total de membros: <span id="totalEquipe">0</span></p>
-    <p>Comissão total: R$ <span id="totalComissao">0.00</span></p>
+    <p>Comissão total: R$ <span id="totalComissao">0,00</span></p>
   </div>
 
   <div class="box">
     <h3>Prêmios de convite</h3>
     <div class="info-text">
-      Quando os amigos que você convidar se inscreverem e investirem, você receberá imediatamente <strong>25%</strong> em dinheiro de volta.<br><br>
-      Quando os membros da sua equipe de nível 2 investirem, você receberá <strong>3%</strong> em dinheiro de volta.<br><br>
-      Quando os membros da sua equipe Nível 3 investirem, você receberá <strong>1%</strong> em dinheiro de volta.<br><br>
-      Depois que os membros da sua equipe investem, as recompensas em dinheiro são enviadas diretamente para o saldo da sua conta e você pode sacar dinheiro a qualquer momento.
+      Quando os amigos que você convidar se inscreverem e investirem, você receberá imediatamente <strong>26%</strong> de comissão.<br><br>
+      Quando os membros da sua equipe de nível 2 investirem, você receberá <strong>1%</strong> de comissão.<br><br>
+      Quando os membros da sua equipe Nível 3 investirem, você receberá <strong>1%</strong> de comissão.<br><br>
+      As comissões são creditadas diretamente no seu saldo e podem ser sacadas a qualquer momento.
     </div>
   </div>
-
-  <!-- Adicionando o novo div -->
-  <div id="area-indicacoes"></div>
 
   <script>
     const firebaseConfig = {
@@ -137,6 +139,13 @@
       navigator.clipboard.writeText(texto).then(() => alert("Copiado!"));
     }
 
+    function compartilharWhatsApp() {
+      const link = document.getElementById("link").textContent.trim();
+      const texto = `Cadastre-se agora na H Invest e ganhe comissão: ${link}`;
+      const url = `https://wa.me/?text=${encodeURIComponent(texto)}`;
+      window.open(url, '_blank');
+    }
+
     db.ref("usuarios/" + telefone).once("value").then(snapshot => {
       const user = snapshot.val();
       if (!user) return;
@@ -151,7 +160,6 @@
 
       let totalPessoas = 0;
       let totalBonus = 0;
-
       let lv1 = { qtd: 0, bonus: 0 };
       let lv2 = { qtd: 0, bonus: 0 };
       let lv3 = { qtd: 0, bonus: 0 };
@@ -184,25 +192,23 @@
         }
 
         const li = document.createElement("li");
-        li.textContent = `${nome} - Comissão: R$ ${bonus.toFixed(2).replace('.', ',')}`;
+        li.textContent = `${nome} - Nível ${nivel} - Comissão: R$ ${bonus.toFixed(2).replace('.', ',')}`;
         listaUl.appendChild(li);
       });
 
       document.getElementById("lv1-qtd").textContent = `${lv1.qtd} Quantidade efetiva`;
       document.getElementById("lv1-bonus").textContent = `R$ ${lv1.bonus.toFixed(2).replace('.', ',')} Bônus`;
-
       document.getElementById("lv2-qtd").textContent = `${lv2.qtd} Quantidade efetiva`;
       document.getElementById("lv2-bonus").textContent = `R$ ${lv2.bonus.toFixed(2).replace('.', ',')} Bônus`;
-
       document.getElementById("lv3-qtd").textContent = `${lv3.qtd} Quantidade efetiva`;
       document.getElementById("lv3-bonus").textContent = `R$ ${lv3.bonus.toFixed(2).replace('.', ',')} Bônus`;
 
       document.getElementById("total-pessoas").textContent = totalPessoas;
       document.getElementById("total-bonus").textContent = `R$ ${totalBonus.toFixed(2).replace('.', ',')}`;
-
       document.getElementById("totalEquipe").textContent = totalEquipe;
       document.getElementById("totalComissao").textContent = totalComissao.toFixed(2).replace('.', ',');
     });
   </script>
+
 </body>
 </html>
