--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
               timestamp: Date.now()
             }).then(() => {
               document.getElementById("codigo-gerado").innerText =
-                "Seu código de indicação: " + meuCodigo + 
-                "\nCompartilhe este link:\nhttps://inves13.github.io/hivest-codigo-1/?codigo=" + meuCodigo;
+                "Cadastro realizado com sucesso!\n\nSeu código de indicação: " + meuCodigo + 
+                "\n\nCompartilhe com amigos e ganhe bônus:\nhttps://inves13.github.io/hivest-codigo-1/?codigo=" + meuCodigo;
 
               localStorage.setItem("telefoneLogado", telefone);
               setTimeout(() => {
