--- a/H.html
+++ b/H.html
@@ -59,9 +59,9 @@
   <!-- Menu inferior -->
   <nav class="menu-inferior">
     <a href="H.html" class="ativo"><img src="30001.png" alt=""> Início</a>
-    <a href="investimento.html"><img src="10016.png" alt=""> Ganhos 1</a>
-    <a href="equipe.html"><img src="10017.png" alt=""> Ganhos 2</a>
-    <a href="perfil.html"><img src="ft4_1.png" alt=""> Meu</a>
+    <a href="investimento.html"><img src="10016.png" alt=""> investimento </a>
+    <a href="equipe.html"><img src="10017.png" alt=""> equipe </a>
+    <a href="perfil.html"><img src="ft4_1.png" alt=""> perfil </a>
   </nav>
 
   <script>
