--- a/equipe .html
+++ b/equipe .html
@@ -1,57 +1,119 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Planos de Investimento</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>H Invest - Código de Convite</title>
   <style>
     body {
+      background: #111;
+      color: white;
       font-family: Arial, sans-serif;
-      background: #000;
-      color: #fff;
-      text-align: center;
       padding: 20px;
     }
-    .card {
-      background: #111;
-      border: 1px solid #444;
-      border-radius: 8px;
-      margin: 15px auto;
-      padding: 15px;
-      width: 90%;
-      max-width: 400px;
+    .box {
+      background: #1e1e1e;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
     }
-    .buy-button, .meus-produtos-button {
+    .label {
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+    .linha {
+      background: #222;
+      padding: 12px;
+      border-radius: 8px;
+      margin-bottom: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    button {
+      padding: 8px 12px;
       background: #28a745;
       color: white;
-      padding: 10px;
-      margin-top: 10px;
       border: none;
-      width: 100%;
-      border-radius: 4px;
+      border-radius: 6px;
+      cursor: pointer;
       font-weight: bold;
     }
-    #planos, #meus-produtos {
+    h3 {
       margin-top: 20px;
     }
-    .comprado {
-      color: green;
-      font-weight: bold;
+    .info-text {
+      font-size: 14px;
+      line-height: 1.5;
+      color: #ccc;
+    }
+    ul {
+      padding-left: 20px;
+      list-style: disc;
+      color: #ccc;
     }
   </style>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 </head>
 <body>
 
-  <h1>Comprar Planos</h1>
-  <h2>Saldo: R$ <span id="saldo">0.00</span></h2>
+  <div class="box">
+    <div class="label">Código de Convite</div>
+    <div class="linha">
+      <span id="codigo">Carregando...</span>
+      <button onclick="copiarTexto('codigo')">Copiar</button>
+    </div>
 
-  <button class="meus-produtos-button" onclick="mostrarMeusProdutos()">Meus Produtos</button>
+    <div class="label">Link de convite</div>
+    <div class="linha">
+      <span id="link">Carregando...</span>
+      <button onclick="copiarTexto('link')">Copiar</button>
+    </div>
 
-  <div id="planos"></div>
-  <div id="meus-produtos" style="display:none;"></div>
+    <div class="linha">
+      <strong>Compartilhar</strong>
+      <button onclick="compartilharWhatsApp()">WhatsApp</button>
+    </div>
 
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+    <div class="label">Minha equipe</div>
+
+    <h3>LV1</h3>
+    <div class="linha"><span>26% Taxa de comissão</span></div>
+    <div class="linha"><span id="lv1-qtd">0 Quantidade efetiva</span></div>
+    <div class="linha"><span id="lv1-bonus">R$ 0,00 Bônus</span></div>
+
+    <h3>LV2</h3>
+    <div class="linha"><span>1% Taxa de comissão</span></div>
+    <div class="linha"><span id="lv2-qtd">0 Quantidade efetiva</span></div>
+    <div class="linha"><span id="lv2-bonus">R$ 0,00 Bônus</span></div>
+
+    <h3>LV3</h3>
+    <div class="linha"><span>1% Taxa de comissão</span></div>
+    <div class="linha"><span id="lv3-qtd">0 Quantidade efetiva</span></div>
+    <div class="linha"><span id="lv3-bonus">R$ 0,00 Bônus</span></div>
+
+    <div class="linha"><strong>Número de pessoas</strong><span id="total-pessoas">0</span></div>
+    <div class="linha"><strong>Bônus total</strong><span id="total-bonus">R$ 0,00</span></div>
+
+    <h3>Lista da equipe completa</h3>
+    <ul id="listaEquipe"></ul>
+    <p>Total de membros: <span id="totalEquipe">0</span></p>
+    <p>Comissão total: R$ <span id="totalComissao">0,00</span></p>
+  </div>
+
+  <div class="box">
+    <h3>Prêmios de convite</h3>
+    <div class="info-text">
+      Quando os amigos que você convidar se inscreverem e investirem, você receberá imediatamente <strong>26%</strong> de comissão.<br><br>
+      Quando os membros da sua equipe de nível 2 investirem, você receberá <strong>1%</strong> de comissão.<br><br>
+      Quando os membros da sua equipe Nível 3 investirem, você receberá <strong>1%</strong> de comissão.<br><br>
+      As comissões são creditadas diretamente no seu saldo e podem ser sacadas a qualquer momento.
+    </div>
+  </div>
 
   <script>
     const firebaseConfig = {
@@ -67,117 +129,86 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    const userId = localStorage.getItem("telefoneLogado");
-    const userRef = db.ref("usuarios/" + userId);
-
-    const planos = [
-      { nome: "Plano Bronze", valor: 60, retornoDiario: 60 * 0.05 },
-      { nome: "Plano Prata", valor: 160, retornoDiario: 160 * 0.05 },
-      { nome: "Plano Ouro", valor: 300, retornoDiario: 300 * 0.05 },
-      { nome: "Plano Platina", valor: 450, retornoDiario: 450 * 0.05 },
-      { nome: "Plano Diamante", valor: 500, retornoDiario: 500 * 0.05 },
-      { nome: "Plano Master", valor: 650, retornoDiario: 650 * 0.05 },
-      { nome: "Plano VIP", valor: 700, retornoDiario: 700 * 0.05 },
-      { nome: "Plano Supremo", valor: 850, retornoDiario: 850 * 0.05 },
-      { nome: "Plano Elite", valor: 900, retornoDiario: 900 * 0.05 },
-      { nome: "Plano Imperador", valor: 1050, retornoDiario: 1050 * 0.05 }
-    ];
-
-    function carregarPlanos(saldo) {
-      const container = document.getElementById("planos");
-      container.innerHTML = "";
-      document.getElementById("meus-produtos").style.display = "none";
-      container.style.display = "block";
-
-      planos.forEach(plano => {
-        const card = document.createElement("div");
-        card.className = "card";
-        card.innerHTML = `
-          <h3>${plano.nome} - R$${plano.valor}</h3>
-          <img src="1004.png" alt="Imagem do plano ${plano.valor}" style="width: 100%; height: auto; border-radius: 8px;">
-          <p>Retorno diário: R$${plano.retornoDiario.toFixed(2)}</p>
-          <p>Lucro total: R$${(plano.valor * 0.05 * 50).toFixed(2)}</p>
-          <button class="buy-button" onclick="comprarPlano('${plano.nome}', ${plano.valor}, ${plano.retornoDiario})">Comprar</button>
-        `;
-        container.appendChild(card);
-      });
+    const telefone = localStorage.getItem("telefoneLogado");
+    if (!telefone) {
+      window.location.href = "index.html";
     }
 
-    function atualizarSaldo() {
-      userRef.once("value").then(snapshot => {
-        const data = snapshot.val() || {};
-        const saldo = parseFloat(data.saldoConta || 0);
-        document.getElementById("saldo").textContent = saldo.toFixed(2);
-        carregarPlanos(saldo);
-      });
+    function copiarTexto(id) {
+      const texto = document.getElementById(id).textContent.trim();
+      navigator.clipboard.writeText(texto).then(() => alert("Copiado!"));
     }
 
-    function comprarPlano(nome, valor, retornoDiario) {
-      userRef.once("value").then(snapshot => {
-        const data = snapshot.val() || {};
-        const saldoAtual = parseFloat(data.saldoConta || 0);
+    function compartilharWhatsApp() {
+      const link = document.getElementById("link").textContent.trim();
+      const texto = `Cadastre-se agora na H Invest e ganhe comissão: ${link}`;
+      const url = `https://wa.me/?text=${encodeURIComponent(texto)}`;
+      window.open(url, '_blank');
+    }
 
-        if (saldoAtual < valor) {
-          alert("Saldo insuficiente!");
-          return;
+    db.ref("usuarios/" + telefone).once("value").then(snapshot => {
+      const user = snapshot.val();
+      if (!user) return;
+
+      const codigo = user.codigo || "1";
+      document.getElementById("codigo").textContent = codigo;
+      document.getElementById("link").textContent = `https://inves13.github.io/hivest-codigo-1/?codigo=${codigo}`;
+    });
+
+    db.ref("usuarios/" + telefone + "/equipe").once("value").then(snapshot => {
+      if (!snapshot.exists()) return;
+
+      let totalPessoas = 0;
+      let totalBonus = 0;
+      let lv1 = { qtd: 0, bonus: 0 };
+      let lv2 = { qtd: 0, bonus: 0 };
+      let lv3 = { qtd: 0, bonus: 0 };
+
+      const listaUl = document.getElementById("listaEquipe");
+      let totalEquipe = 0;
+      let totalComissao = 0;
+
+      snapshot.forEach(child => {
+        const item = child.val();
+        totalPessoas++;
+        totalEquipe++;
+
+        const nivel = item.nivel;
+        const bonus = parseFloat(item.bonus || 0);
+        const nome = item.nome || "Sem nome";
+
+        totalBonus += bonus;
+        totalComissao += bonus;
+
+        if (nivel === 1) {
+          lv1.qtd++;
+          lv1.bonus += bonus;
+        } else if (nivel === 2) {
+          lv2.qtd++;
+          lv2.bonus += bonus;
+        } else if (nivel === 3) {
+          lv3.qtd++;
+          lv3.bonus += bonus;
         }
 
-        const novoSaldo = saldoAtual - valor;
-        const investimentos = data.investimentos || [];
-        const novoInvestimento = {
-          nome: nome,
-          valor: valor,
-          data: new Date().toLocaleDateString(),
-          retornoDiario: retornoDiario.toFixed(2),
-          diasRestantes: 50,
-          imagem: `imagens/PLANO_${valor}.png`,
-          status: "comprado"  // Novo campo para indicar que o plano foi comprado
-        };
-
-        investimentos.push(novoInvestimento);
-
-        userRef.update({
-          saldoConta: novoSaldo,
-          saldo: novoSaldo,
-          investimentos: investimentos
-        }).then(() => {
-          alert("Plano adquirido com sucesso!");
-          atualizarSaldo();
-        });
+        const li = document.createElement("li");
+        li.textContent = `${nome} - Nível ${nivel} - Comissão: R$ ${bonus.toFixed(2).replace('.', ',')}`;
+        listaUl.appendChild(li);
       });
-    }
 
-    function mostrarMeusProdutos() {
-      userRef.once("value").then(snapshot => {
-        const data = snapshot.val() || {};
-        const investimentos = data.investimentos || [];
+      document.getElementById("lv1-qtd").textContent = `${lv1.qtd} Quantidade efetiva`;
+      document.getElementById("lv1-bonus").textContent = `R$ ${lv1.bonus.toFixed(2).replace('.', ',')} Bônus`;
+      document.getElementById("lv2-qtd").textContent = `${lv2.qtd} Quantidade efetiva`;
+      document.getElementById("lv2-bonus").textContent = `R$ ${lv2.bonus.toFixed(2).replace('.', ',')} Bônus`;
+      document.getElementById("lv3-qtd").textContent = `${lv3.qtd} Quantidade efetiva`;
+      document.getElementById("lv3-bonus").textContent = `R$ ${lv3.bonus.toFixed(2).replace('.', ',')} Bônus`;
 
-        const container = document.getElementById("meus-produtos");
-        container.innerHTML = "<h2>Meus Produtos</h2>";
-        document.getElementById("planos").style.display = "none";
-        container.style.display = "block";
-
-        if (investimentos.length === 0) {
-          container.innerHTML += "<p>Você ainda não comprou nenhum plano.</p>";
-        } else {
-          investimentos.forEach((inv, index) => {
-            const card = document.createElement("div");
-            card.className = "card";
-            card.innerHTML = `
-              <h3>${inv.nome} - R$${inv.valor}</h3>
-              <img src="1004.png" style="width: 100%; height: auto; border-radius: 8px;">
-              <p>Data da compra: ${inv.data}</p>
-              <p>Retorno diário: R$${inv.retornoDiario}</p>
-              <p>Dias restantes: ${inv.diasRestantes}</p>
-              ${inv.status === "comprado" ? '<p class="comprado">Plano comprado!</p>' : ''}
-            `;
-            container.appendChild(card);
-          });
-        }
-      });
-    }
-
-    atualizarSaldo();
+      document.getElementById("total-pessoas").textContent = totalPessoas;
+      document.getElementById("total-bonus").textContent = `R$ ${totalBonus.toFixed(2).replace('.', ',')}`;
+      document.getElementById("totalEquipe").textContent = totalEquipe;
+      document.getElementById("totalComissao").textContent = totalComissao.toFixed(2).replace('.', ',');
+    });
   </script>
+
 </body>
 </html>
