--- a/presente.htm
+++ b/presente.htm
@@ -56,32 +56,50 @@
         <p id="status"></p>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
     <script>
+        // Configuração do Firebase (substitua pelas suas credenciais)
+        const firebaseConfig = {
+            apiKey: "sua-api-key",
+            authDomain: "seu-auth-domain",
+            databaseURL: "seu-database-url",
+            projectId: "seu-project-id",
+            storageBucket: "seu-storage-bucket",
+            messagingSenderId: "seu-sender-id",
+            appId: "seu-app-id"
+        };
+
+        // Inicializa o Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+
+        // Função para resgatar o presente
         function resgatarPresente() {
-            let ultimoResgate = localStorage.getItem("ultimoResgate");
-            let agora = new Date().getTime();
-            
-            if (ultimoResgate && (agora - ultimoResgate < 2 * 60 * 60 * 1000)) {
-                document.getElementById("status").innerText = "Aguarde 2 horas para resgatar novamente!";
-                return;
-            }
+            const userId = "user123"; // Substitua isso pelo ID do usuário logado
+            const presentesRef = database.ref('usuarios/' + userId + '/presentes/');
+            presentesRef.once('value', snapshot => {
+                const presentes = snapshot.val();
+                for (let presenteId in presentes) {
+                    const presente = presentes[presenteId];
+                    if (presente && presente.status === 'disponível') {
+                        // Atualiza o status do presente para "resgatado"
+                        presentesRef.child(presenteId).update({ status: 'resgatado' });
 
-            // Salva o horário do resgate
-            localStorage.setItem("ultimoResgate", agora);
-            
-            // Atualiza o saldo no h.html (Simulação)
-            let saldoAtual = localStorage.getItem("saldo") ? parseFloat(localStorage.getItem("saldo")) : 0;
-            let novoSaldo = saldoAtual + 0.50;
-            localStorage.setItem("saldo", novoSaldo);
+                        // Aplica o bônus ou presente
+                        if (presente.tipo === 'bônus') {
+                            const saldoRef = database.ref('usuarios/' + userId + '/saldodaConta');
+                            saldoRef.transaction(currentSaldo => {
+                                return (currentSaldo || 0) + presente.valor;
+                            });
+                        }
 
-            document.getElementById("status").innerText = "Presente resgatado! Aguarde 2 horas para novo resgate.";
-
-            // Após 2 horas, adiciona R$1,50
-            setTimeout(() => {
-                let saldoAtualizado = parseFloat(localStorage.getItem("saldo")) + 1.50;
-                localStorage.setItem("saldo", saldoAtualizado);
-                document.getElementById("status").innerText = "Seu saldo foi atualizado para R$ " + saldoAtualizado.toFixed(2);
-            }, 2 * 60 * 60 * 1000);
+                        document.getElementById("status").innerText = "Presente resgatado com sucesso!";
+                    } else {
+                        document.getElementById("status").innerText = "Presente não disponível.";
+                    }
+                }
+            });
         }
     </script>
 
