--- a/H.html
+++ b/H.html
@@ -29,7 +29,7 @@
   <div class="notificacao">
     <span class="icone-sino">🔔</span>
     <marquee behavior="scroll" direction="left">
-      Recarga R$160 com sucesso telefone (75)998**2201  Saque R$300 chave 🔑 Juao***@gmail.com andamento da 08.00 até às  21.00 horas nova investimentos de R$600.00 
+      Recarga R$160 com sucesso telefone (75)998**2201  Saque senhor dos membros da plataforma H investe a parte de depósito Galera ainda não tá liberado porque a plataforma tá em manutenção tá atualizando em breve vai estar disponível Então fique aguardando que qualquer momento a parte de recarga qualquer momento pode estar ativo 
     </marquee>
   </div>
 
