--- a/H.html
+++ b/H.html
@@ -29,7 +29,7 @@
   <div class="notificacao">
     <span class="icone-sino">🔔</span>
     <marquee behavior="scroll" direction="left">
-     senhor dos membros da plataforma H investe a parte de depósito Galera ainda não tá liberado porque a plataforma tá em manutenção tá atualizando em breve vai estar disponível Então fique aguardando que qualquer momento a parte de recarga qualquer momento pode estar ativo 
+     senhores membros da plataforma hinvest a opção de recarga ainda não tá liberado porque a plataforma ainda está tendo configurado novamente é só aguardar quando tiver liberado que vocês poderá fazer sua recarga e seus investimentos plataforma h inverte tenha uma boa sorte 
     </marquee>
   </div>
 
